# sp_control

./: .gitignore  AutoBringUp.sh  KillAllRosNode.sh  README.md
DOCS/: ROSDOC.md
arm_moveit_config/: CMakeLists.txt
arm_moveit_config/config/: engineer.srdf
arm_moveit_config/launch/: arm_moveit_controller_manager.launch.xml  moveit_planning_execution.launch  setup_assistant.launch
chassis_controller/: CMakeLists.txt  package.xml
chassis_controller/config/: engineer.yaml
chassis_controller/src/: chassis_base.cpp
engineer_gazebo/: package.xml
engineer_gazebo/config/: arm_gazebo_joint_states.yaml  arm_trajectory_controller.yaml
engineer_gazebo/launch/: engineer_bringup_sim.launch
imu_control/: CMakeLists.txt  package.xml
imu_control/src/: ImuVelPub.cpp  Kalman.cpp  speedpub.cpp
sp_common/: CMakeLists.txt  package.xml
sp_common/msg/: ActuatorState.msg  ChassisCmd.msg  CustomerControllerCmd.msg  DbusData.msg  GimbalCmd.msg  GpioData.msg  JointMsgs.msg  ManipulatorCmd.msg  ShooterCmd.msg  SingleJointWrite.msg  VisionCmd.msg
sp_common/srv/: CalibrationState.srv
sp_control/adjustment_controller/: CMakeLists.txt  adjustment_controller_plugins.xml  package.xml
sp_control/arm_moveit_config/: .setup_assistant  package.xml
sp_control/calibration_controller/: CMakeLists.txt  calibration_controller_plugins.xml  package.xml
sp_control/chassis_controller/: CMakeLists.txt  chassis_controller_plugins.xml  package.xml
sp_control/differential_controller/: CMakeLists.txt  differential_controller_plugins.xml  package.xml
sp_control/engineer2_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sp_control/engineer3_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sp_control/engineer_gazebo/: CMakeLists.txt  package.xml
sp_control/engineer_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sp_control/framed_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sp_control/gimbal_controller/: .chassis_controller_plugins.xml.swp  CMakeLists.txt  gimbal_controller_plugins.xml  package.xml
sp_control/gpio_controller/: CMakeLists.txt  gpio_controller_plugins.xml  package.xml
sp_control/manipulator_control/: CMakeLists.txt  package.xml
sp_control/manipulator_control/config/: arm_trajectory_controller.yaml
sp_control/manipulator_control/include/manipulator_control/: arm_control.h  scene_generate.h
sp_control/manipulator_control/launch/: arm_trajectory_controller.launch  manipulator_control.launch  manipulator_controller.launch
sp_control/manipulator_control/src/: arm_control.cpp  manipulator_control.cpp  scene_generate.cpp
sp_control/syn_controller/: CMakeLists.txt  package.xml  syn_controller_plugins.xml
sp_control/syn_controller/config/: syn_controller.yaml
sp_control/syn_controller/include/syn_controller/: syn_controller.h
sp_control/syn_controller/launch/: syn_controller.launch
sp_control/syn_controller/src/: syn_controller.cpp
sp_description/: CMakeLists.txt  engineer.rviz  package.xml  sentry.rviz  urdf.rviz
sp_gazebosim/: CMakeLists.txt  package.xml
sp_hw/: CMakeLists.txt  package.xml
sp_operator/: CMakeLists.txt  package.xml
sp_vision/: readme.txt
(+702 files in other folders)
