<?xml version="1.0"?>
<package format="2">
    <name>syn_controller</name>
    <version>0.1.7</version>
    <description>The syn_controller package</description>
    <maintainer email="kclroku@outlook.com">Cherryblossomnight</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>sp_common</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>realtime_tools</depend>


    <export>
        <controller_interface plugin="${prefix}/syn_controller_plugins.xml"/>
    </export>
</package>
